tests/e2e/pass/m25_argv.ep
# ARGV: hello
# EXIT: 0
# STDOUT: hello
fun main(): void {
    if len(argv) < 2 {
        println("missing")
        exit(1)
    }
    println(argv[1])
    exit(0)
}
