tests/e2e/fail/v1_checked_str_index_oob.ep
# EXIT: 1
fun main(): void {
    let s = "A"
    let x = s[1]
    exit(0)
}
